--- a/index.html
+++ b/index.html
@@ -61,6 +61,100 @@
         </ul>
       </div>
     </header>
+
+    <section class="section__container popular__container" id="menu">
+      <h2 class="section__header">Popular Ice-Cream</h2>
+      <div class="popular__grid">
+        <div class="popular__card">
+          <img src="assets/popular-1.png" alt="popular" />
+          <div class="popular__card__content">
+            <h4>Mango Tango Sorbet</h4>
+            <h3>15.49</h3>
+          </div>
+        </div>
+        <div class="popular__card">
+          <img src="assets/popular-2.png" alt="popular" />
+          <div class="popular__card__content">
+            <h4>Chocolate Fudge Delight</h4>
+            <h3>$5.99</h3>
+          </div>
+        </div>
+        <div class="popular__card">
+          <img src="assets/popular-3.png" alt="popular" />
+          <div class="popular__card__content">
+            <h4>Strawberry Swirl Bliss</h4>
+            <h3>$4.99</h3>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section__container discover__container" id="categories">
+      <h2 class="section__header">Most Selling Ice-Cream</h2>
+      <p class="section__description">
+        Discover our crowd favorites! These ice creams are loved by everyone and
+        have become the top picks for their irresistible flavors and creamy
+        textures.
+      </p>
+      <div class="discover__grid">
+        <div class="discover__card">
+          <img src="assets/discover-1.jpg" alt="discover" />
+          <div class="discover__card__content">
+            <h4>Double Chocolate Crunch</h4>
+            <p class="section__description">
+              Dive into a chocolate lover's paradise with our Double Chocolate
+              Crunch. This rich and creamy ice cream is made with premium cocoa
+              and blended with crunchy chocolate chunks to deliver a perfect
+              balance of smoothness and texture.
+            </p>
+            <h3>
+              $6.99 <span><s>$9.99</s></span>
+            </h3>
+            <div class="discover__card__btn">
+              <button class="btn">Buy Now</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="discover__card">
+          <img src="assets/discover-2.jpg" alt="discover" />
+          <div class="discover__card__content">
+            <h4>Strawberry Cheesecake Bliss</h4>
+            <p class="section__description">
+              Dive into a chocolate lover's paradise with our Double Chocolate
+              Crunch. This rich and creamy ice cream is made with premium cocoa
+              and blended with crunchy chocolate chunks to deliver a perfect
+              balance of smoothness and texture.
+            </p>
+            <h3>
+              $5.99 <span><s> $8.99</s></span>
+            </h3>
+            <div class="discover__card__btn">
+              <button class="btn">Buy Now</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="discover__card">
+          <img src="assets/discover-3.jpg" alt="discover" />
+          <div class="discover__card__content">
+            <h4>Classic Cookies and Cream</h4>
+            <p class="section__description">
+              Experience the perfect harmony of fruity and creamy with our
+              Strawberry Cheesecake Bliss. Every spoonful feels like enjoying a
+              slice of fresh strawberry cheesecake, making it an irresistible
+              dessert.
+            </p>
+            <h3>
+              $5.49 <span><s> $10.49</s></span>
+            </h3>
+            <div class="discover__card__btn">
+              <button class="btn">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="main.js"></script>
   </body>
