--- a/index.html
+++ b/index.html
@@ -155,6 +155,87 @@
         </div>
       </div>
     </section>
+
+    <section class="banner">
+      <div class="banner__image"></div>
+      <div class="banner__content">
+        <h2 class="section__header">
+          Get Yummy Ice-Cream at a Reasonable Price
+        </h2>
+        <p class="section__description">
+          Treat yourself to delightful ice creams without breaking the bank!
+          Enjoy premium quality and mouthwatering flavors at prices that make
+          every scoop worth it.
+        </p>
+        <div class="banner__flex">
+          <div class="banner__card">
+            <img src="assets/banner-1.png" alt="banner" />
+            <h4>Fresh & Natural</h4>
+          </div>
+          <div class="banner__card">
+            <img src="assets/banner-2.png" alt="banner" />
+            <h4>Quick Packaging</h4>
+          </div>
+          <div class="banner__card">
+            <img src="assets/banner-3.png" alt="banner" />
+            <h4>Fast Delivery</h4>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section__container subscribe__container" id="contact">
+      <div class="subscribe__content">
+        <h2 class="section__header">Subscribe For Discounts</h2>
+        <p class="section__description">
+          Don't miss out on sweet deals! Subscribe now to receive exclusive
+          discounts and updates on our latest ice cream flavors and special
+          offers.
+        </p>
+        <form action="/">
+          <input type="text" placeholder="Type Your Email" />
+          <button class="btn">Subscribe</button>
+        </form>
+      </div>
+    </section>
+
+    <footer>
+      <div class="section__container footer__container">
+        <div class="footer__col">
+          <a href="" class="logo"
+            >Ice
+            <span>World</span>
+          </a>
+        </div>
+        <div class="footer__col">
+          <ul class="footer__links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#categories">Categories</a></li>
+            <li><a href="#contact">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="footer__col">
+          <ul class="socials">
+            <li>
+              <a href=""><i class="ri-facebook-circle-fill"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="ri-twitter-fill"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="ri-pinterest-fill"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="ri-phone-fill"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer__bar">
+        Copyright © 2025 Web Design Mastery. All rights reserved.
+      </div>
+    </footer>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="main.js"></script>
   </body>
